# miriad256

./: .gitignore  Dockerfile  GNUmakedefs  GNUmakefile  INSTALL.html  MIRRC  MIRRC.csh.in  MIRRC.sh  MIRRC.sh.in  MacBinaryInstall.html  README.md  config.status  configure  configure.ac  meson.build  setup_env.sh
cat/: GNUmakefile
doc/: addhis.doc  antconv.doc  antpol.doc  arrayplt.doc  arrfix.doc  atfix.doc  atlod.doc  atmerge.doc  atmos.doc  atrecal.doc  atrtfix.doc  atscfix.doc  attsys.doc  atwvr.doc  atxy.doc  avmaths.doc  bbcal.doc  blcal.doc  blflag.doc  boxspec.doc  calc.doc  calplot.doc  calred.doc  cclean.doc  cgcurs.doc  cgdisp.doc  cginit.doc  cgrego.doc  cgslice.doc  cgspec.doc  changes.doc  cheat.doc  clean.doc  clfind.doc  closure.doc  clplot.doc  clstats.doc  colden.doc  confighist.doc  conterr.doc  (+233 more)
guides/: Buildcheat  Buildhtmltask  Buildtasks  GNUmakefile  doc2html  taskref.txt
guides/misc/: circpolguide.ps  clfind.ps
guides/prog/: Buildtitlepage  GNUmakefile  dot.latex2html-init  htmldefs.inc  image.inc  latexdefs.inc  uvvars.inc
guides/user/: Buildtitlepage  GNUmakefile  mm.inc
html/: INSTALL.html  MacBinaryInstall.html  index.html  mirsync  taskindex.html  tutorials.html~
html/doc/: mirflag.html
html/progguide/: WARNINGS  images.aux  images.pl  images.tex  index.html  internals.pl  labels.pl  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  node38.html  node39.html  (+29 more)
html/userguide/: images.pl  images.tex  index.html  internals.pl  labels.pl  node1.html  node10.html  node100.html  node101.html  node102.html  node103.html  node104.html  node105.html  node106.html  node107.html  node108.html  node109.html  node11.html  node110.html  node111.html  node112.html  node113.html  node114.html  node115.html  node116.html  node117.html  node118.html  node119.html  node12.html  node120.html  node121.html  node122.html  node123.html  node124.html  node125.html  node126.html  node127.html  node128.html  node129.html  node13.html  (+185 more)
inc/: GNUmakefile  inc.hdrlist  maxdim.h.in  maxdimc.h  maxdimc.h.in  meson.build  mirconst.h  prog.hdrlist  rpfits.inc  subs.hdrlist  wcslib.hdrlist
inc/darwin_x86_64/wcslib/: wcsconfig.h  wcsconfig_f77.h
inc/linux64/: GNUmakefile  maxdim.h  maxdim.h.in  maxdim.h~  maxdimc.h  maxdimc.h~
inc/linux64/wcslib/: wcsconfig_f77.h
inc/prog/: clplot.h  fits.h  imhist.h  meson.build  uvaver.h.in  uvsfit.h  uvspec.h.in  velplot.h
inc/subs/: co.h  mc.h  meson.build
inc/wcslib/: meson.build  wcsconfig.h
linpack/: GNUmakefile
man/man1/: addhis.1  antconv.1  antpol.1  arrayplt.1  arrfix.1  atfix.1  atlod.1  atmerge.1  atmos.1  atrecal.1  atrtfix.1  atscfix.1  attsys.1  atwvr.1  atxy.1  avmaths.1  blcal.1  blflag.1  boxspec.1  calc.1  calplot.1  calred.1  cclean.1  cgcurs.1  cgdisp.1  cginit.1  cgrego.1  cgslice.1  cgspec.1  clean.1  clfind.1  closure.1  clplot.1  clstats.1  colden.1  conterr.1  contsen.1  contsub.1  convol.1  copyhd.1  (+209 more)
prog/: antpol.for  arrfix.for  atlod.for  atxy.for  blcal.for  cclean.for  cgcurs.for  cgslice.for  cgspec.for  clean.for  clplot.for  convol.for  fakeotf.for  fft.for  histo.for  imcat.for  imcfn.for  imcomb.for  imgen.for  imheq.for  imhist.for  immerge.for  imom.for  impol.for  impoly.for  impos.for  imspec.for  invert.for  mathd.for  mfcal.for  mfclean.for  mfspin.for  moment.for  mopfix.for  mosmem.for  mospsf.for  mossdi.for  pbplot.for  pcsub.for  plgeom.for  (+34 more)
scripts/: GNUmakedefs.in  GNUmakefile  MIRRC.in  MIRRC.sh.in  checl  mirf  mirimport  mirsync  mirtree  veldop.py
scripts/alpha/: GNUmakedefs  GNUmakefile
scripts/convex/: GNUmakedefs
scripts/cygwin/: GNUmakedefs
scripts/darwin_ppc/: GNUmakedefs
scripts/darwin_x86/: GNUmakedefs  GNUmakefile
scripts/darwin_x86_64/: GNUmakedefs  GNUmakefile  fixdylibs
scripts/hpux/: GNUmakedefs
scripts/i86sol/: GNUmakedefs
scripts/irix/: GNUmakedefs
scripts/irix64/: GNUmakedefs
scripts/linux/: GNUmakedefs
scripts/linux-ia64/: GNUmakedefs
scripts/linux64/: GNUmakedefs  GNUmakefile
scripts/sun4/: GNUmakedefs
scripts/sun4sol/: GNUmakedefs
scripts/unicos/: GNUmakedefs
scripts/web/: mirman.pl  test.pl
spec/: GNUmakefile
spec/bbcal/: GNUmakefile
spec/xmtv/: GNUmakefile  (+1 more)
specdoc/: GNUmakefile  cheat.doc  tasks.doc  uv2ms.doc
src/: linpack.filelist  meson.build  prog.filelist  scripts.filelist  subs.filelist
src/linpack/: meson.build  schdd.for
src/prog/: GNUmakefile  atfix.for  atrecal.for  atrtfix.for  atscfix.for  attsys.for  atwvr.for  avmaths.for  blflag.for  calc.for  calred.for  cgdisp.for  clfind.for  closure.for  clstats.for  conterr.for  contsub.for  demos.for  ellint.for  ellplt.for  fits.for  gaufit.for  gpaver.for  gpboot.for  gpcal.for  gpcopy.for  gpedit.for  gpscal.for  hanning.for  hermes.for  im2uv.for  imbin.for  imblr.for  imfit.for  imhol.for  imlist.for  imrm.for  imspect.for  imstat.for  imstore.for  (+59 more)
src/subs/: align.for  angles.for  boxes.for  bug.c  headcopy.for  hio.c  linetype.for  mapper.for  mapper.h  mc.for  meson.build  mostab.for  obspar.for  pack.c  pb.for  pcvt.for  plane.for  powell.for  uvdat.for  versan.for  wpfit.for  zed.for
src/subs/unix/: GNUmakefile  pack.c
src/subs/unix/alpha_linux/: GNUmakefile
subprojects/rpfits/: meson.build  meson_srclist_c.txt  meson_srclist_fortran.txt
subs/: GNUmakefile  ari.for  atjones.for  axistype.for  bug.c  cgpgsubs.for  cgsubs.for  cnvl.for  co.for  cosubs.for  fftsubs.for  fitsio.for  getfreq.for  hdtab.for  keyline.for  math.for  mm.f2c  model.for  nextpow2.for  noise.for  nswc.for  rest.for  string.for  sysdep.h  title.for  uvdat.h  uvgn.for  uvio.c  var.for  wrap.f2c
tools/: GNUmakefile  MIRRC.sh.in  detab.c  doc.c  doc2man.c  docfmt.c  meson.build  miriad.c  ratty.c  tract.c  varsizes.c
(+9 files in other folders)
